# Aether

./: Cargo.toml  install.sh
.github/workflows/: release.yml
apps/aether-gateway/: Cargo.toml
apps/aether-gateway/src/: constants.rs  frontdoor_loop_guard.rs  headers.rs  main.rs  rate_limit.rs
apps/aether-gateway/src/ai_serving/: api.rs  mod.rs  transport.rs
apps/aether-gateway/src/execution_runtime/: kiro_cache.rs  mod.rs  simulated_cache.rs  transport.rs
apps/aether-gateway/src/orchestration/: effects.rs
apps/aether-gateway/src/state/: core.rs
apps/aether-gateway/src/wallet_runtime/: access.rs
crates/aether-ai-formats/src/: api.rs
crates/aether-ai-serving/src/: surface_spec.rs
crates/aether-billing/src/: default_rule.rs  event_enrichment.rs  pricing.rs  service.rs
crates/aether-provider-pool/src/: lib.rs
crates/aether-provider-transport/src/: conversion.rs  lib.rs  provider_types.rs
crates/aether-scheduler-core/: Cargo.toml
crates/aether-scheduler-core/src/: health.rs  lib.rs
crates/aether-usage-runtime/src/: lib.rs  report.rs  request_metadata.rs  usage_mapper.rs  write.rs
docs/api/: format-conversion-audit.md  format-enum-mapping.md  format-passthrough-contract.md  provider-interface-definitions.md
docs/operations/: pg-to-single-node-migration.md  pg-to-single-node-migration.zh-CN.md
frontend/src/api/: admin.ts  me.ts  providerOps.ts  usage.ts  users.ts
frontend/src/mocks/: handler.ts
frontend/src/utils/: providerKeyQuota.ts
scripts/: migrate-pg-compose-to-single-node.sh  migrate-pg-to-single-node.sh
(+201 files in other folders)
